1st practical exam

--- a/13_oct_class/task2.html
+++ b/13_oct_class/task2.html
@@ -3,11 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Class Time Table</title>
+    <title>Experiment 3</title>
+    <style>
+  table, th, td {
+    border: 2px solid black;
+    border-collapse: collapse;
+  }
+  
+</style>
+
 </head>
 <body>
-    <table border="5px black">
-        <tr>
+  <center>
+    <div style="display:inline-block; border:2px solid black; padding:5px;">
+    <table><caption><center>College Timmetable - CSE Department</center></caption>
+     <tr>
         <th>Time--><br>Day</th>
         <th>08:50-09:40<br>I</th>
         <th>09:40-10:30<br>II</th>
