--- a/1st practical file/experiment_4.html
+++ b/1st practical file/experiment_4.html
@@ -23,9 +23,12 @@
         <label for="guests">Number of Guests: </label>
         <input type="number" name="guests" id="guests"><br><br>
         <center><label for="request">Special Requests: </label>
-            <br><textarea></textarea></center>
+            <br><textarea rows="4" cols="40"></textarea></center>
         <button type="submit">Book Now</button> <button type="reset">Reset Form</button>
     </form>
     </center></fieldset>
+    <footer>
+    <u>Name-Shashwat Rastogi<br>
+    Admission No.-2025B01010265</u> </footer>
 </body>
 </html>
