--- a/1st practical file/experiment_5.html
+++ b/1st practical file/experiment_5.html
@@ -42,5 +42,8 @@
         <p><center>&copy; 2025 Student Registration Portal</center></p>
         
     </form>
+    <footer>
+    <u>Name-Shashwat Rastogi<br>
+    Admission No.-2025B01010265</u> </footer>
 </body>
 </html>
