--- a/1st practical file/experiment_1.html
+++ b/1st practical file/experiment_1.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>Introduction</h1>
-    <p>Welcome to the Course Curriculum.This page demonstrates the use of HTML,formatting,lists and special characters such as &copy; &lt; &gt </p>
+    <p>Welcome to the Course Curriculum.This page demonstrates the use of HTML,formatting,lists and special characters such as &copy; &lt; &gt; </p>
     <h1>Semester 1 Subjects(Ordered List)</h1>
     <ol>
         <li>Mathematics 1</li>
