Test webpage updated

--- a/11)Test_13_nov/que_16.html
+++ b/11)Test_13_nov/que_16.html
@@ -3,83 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>Attendance Sheet</title>
     <style>
-        table,tr,th{
+        table {
             border: 2px solid black;
             border-collapse: collapse;
-            
+            text-align: center;
+            width: 70%;
         }
-        caption{
+
+        th, td {
             border: 2px solid black;
+            padding: 8px;
+        }
+
+        th {
+            background-color: #f2f2f2;
         }
     </style>
 </head>
 <body>
     <center>
-    <table style="border: 2px solid black;">
-        <caption>Attendance Sheet</caption>
-        <tr>
-            <th></th>
-            <th>Monday</th>
-            <th>Tuesday</th>
-            <th>Wednesday</th>
-            <th>Thursday</th>
-            <th>Friday</th>
-            <th>Saturday</th>
-            <th>Sunday</th>
-        </tr>
-        <tr>
-            <th>Shaan</th>
-            <th>P</th>
-            <th>P</th>
-            <th>P</th>
-            <th>A</th>
-            <th>P</th>
-            <th>P</th>
-            <th>P</th>
-        </tr>
-        <tr>
-            <th>Shiv</th>
-            <th>P</th>
-            <th>A</th>
-            <th>A</th>
-            <th>A</th>
-            <th>P</th>
-            <th>P</th>
-            <th>P</th>
-        </tr>
-        <tr>
-            <th>Dev</th>
-            <th>A</th>
-            <th>A</th>
-            <th>P</th>
-            <th>P</th>
-            <th>A</th>
-            <th>A</th>
-            <th>P</th>
-        </tr>
-        <tr>
-            <th>Shashwat</th>
-            <th>P</th>
-            <th>P</th>
-            <th>P</th>
-            <th>P</th>
-            <th>P</th>
-            <th>P</th>
-            <th>P</th>
-        </tr>
-        <tr>
-            <th>Aditya</th>
-            <th>P</th>
-            <th>A</th>
-            <th>P</th>
-            <th>A</th>
-            <th>P</th>
-            <th>A</th>
-            <th>P</th>
-        </tr>
-    </table>
+        <table>
+            <tr>
+                <th colspan="8">Attendance Sheet</th>
+            </tr>
+            <tr>
+                <th></th>
+                <th>Monday</th>
+                <th>Tuesday</th>
+                <th>Wednesday</th>
+                <th>Thursday</th>
+                <th>Friday</th>
+                <th>Saturday</th>
+                <th>Sunday</th>
+            </tr>
+            <tr>
+                <th>Shaan</th>
+                <td>P</td><td>P</td><td>P</td><td>A</td><td>P</td><td>P</td><td>P</td>
+            </tr>
+            <tr>
+                <th>Shiv</th>
+                <td>P</td><td>A</td><td>A</td><td>A</td><td>P</td><td>P</td><td>P</td>
+            </tr>
+            <tr>
+                <th>Dev</th>
+                <td>A</td><td>A</td><td>P</td><td>P</td><td>A</td><td>A</td><td>P</td>
+            </tr>
+            <tr>
+                <th>Shashwat</th>
+                <td>P</td><td>P</td><td>P</td><td>P</td><td>P</td><td>P</td><td>P</td>
+            </tr>
+            <tr>
+                <th>Aditya</th>
+                <td>P</td><td>A</td><td>P</td><td>A</td><td>P</td><td>A</td><td>P</td>
+            </tr>
+        </table>
     </center>
 </body>
 </html>
+
