--- a/10)2nd_practical_file/experiment_1.html
+++ b/10)2nd_practical_file/experiment_1.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!Doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -13,7 +13,7 @@
 
   <main class="container">
     <section class="product-card">
-      <img class="product-image" src="tshirt.webp" alt="Product">
+      <img class="product-image" src="GREEN.png" alt="Product">
       <div class="product-body">
         <h2 class="product-title">Classic Cotton T-Shirt</h2>
         <p class="product-desc">Soft, breathable cotton. Regular fit. Available in multiple colors.</p>
