2nd practical file added

--- a/10)2nd_practical_file/experiment2.html
+++ b/10)2nd_practical_file/experiment2.html
@@ -25,7 +25,10 @@
             <li><a href="#">Logout</a></li>
         </ul>
         <div class="clear"></div>
-    </nav>
+    </nav><br><br>
+    <footer>Shashwat Rastogi<br>
+          2025B01010265          
+  </footer>
 </body>
 
 </html>
