--- a/10)2nd_practical_file/experiment_1.html
+++ b/10)2nd_practical_file/experiment_1.html
@@ -27,5 +27,8 @@
       </div>
     </section>
   </main>
+  <footer>Shashwat Rastogi<br>
+          2025B01010265          
+  </footer>
 </body>
 </html>
